--- a/_includes/head.html
+++ b/_includes/head.html
@@ -75,4 +75,24 @@
   {% endif %}
   <!-- End SEO Tag -->
 
+  <!-- Favicon Tag -->
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ "/img/icon/apple-icon-57x57.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ "/img/icon/apple-icon-60x60.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ "/img/icon/apple-icon-72x72.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ "/img/icon/apple-icon-76x76.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ "/img/icon/apple-icon-114x114.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ "/img/icon/apple-icon-120x120.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ "/img/icon/apple-icon-144x144.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ "/img/icon/apple-icon-152x152.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "/img/icon/apple-icon-180x180.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="192x192"  href="{{ "/img/icon/android-icon-192x192.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ "/img/icon/favicon-32x32.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="96x96" href="{{ "/img/icon/favicon-96x96.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/img/icon/favicon-16x16.png" | relative_url }}">
+  <link rel="manifest" href="{{ "/img/icon/manifest.json" | relative_url }}">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="{{ "/img/icon/ms-icon-144x144.png" | relative_url }}">
+  <meta name="theme-color" content="#ffffff">
+  <!-- End Favicon Tag -->
+
 </head>
