--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 
 <!-- Page Header -->
@@ -50,3 +51,5 @@ layout: default
       </div>
     </div>
   </article>
+
+  {% include disqus.html %}
