--- a/_includes/head.html
+++ b/_includes/head.html
@@ -95,4 +95,17 @@
   <meta name="theme-color" content="#ffffff">
   <!-- End Favicon Tag -->
 
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "NewsArticle",
+        "headline": "{{ page.title }}",
+        "image": [
+          "{{ site.github.url }}{{ page.feature }}",
+         ],
+        "datePublished": "{{ page.date | date_to_xmlschema }}",
+      }
+      </script>
+
+
 </head>
