--- a/_includes/head.html
+++ b/_includes/head.html
@@ -94,7 +94,7 @@
   <meta name="msapplication-TileImage" content="{{ "/img/icon/ms-icon-144x144.png" | relative_url }}">
   <meta name="theme-color" content="#ffffff">
   <!-- End Favicon Tag -->
-  
+
   {% if page.feature %}
   <script type="application/ld+json">
       {
@@ -102,9 +102,9 @@
         "@type": "NewsArticle",
         "headline": "{{ page.title }}",
         "image": [
-          "{{ site.github.url }}{{ page.feature }}",
+          "{{ site.github.url }}{{ page.feature }}"
          ],
-        "datePublished": "{{ page.date | date_to_xmlschema }}",
+        "datePublished": "{{ page.date | date_to_xmlschema }}"
       }
       </script>
       {% endif %}
