네이버 웹마스터 도구

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -109,4 +109,6 @@
       </script>
       {% endif %}
 
+      <meta name="naver-site-verification" content="0e991d75a194829ad008c2c994c62885efbe5618" />
+
 </head>
