--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,11 @@
 {% include head.html %}
 
 <body>
-
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRRBKM6"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   {% include navbar.html %}
 
   {{ content }}
