데이터레이어

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,3 +53,11 @@ comments: true
   </article>
 
   {% include disqus.html %}
+
+  <script>
+    dataLayer.push({
+      'event': 'view_item',
+      'title':'{{ page.title }}',
+      'type': 'post'
+    });
+  </script>
